fix: add overflow-x: hidden for form

--- a/src/pages/main/categorylist/categories.module.scss
+++ b/src/pages/main/categorylist/categories.module.scss
@@ -4,7 +4,8 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(to top, rgb(143, 174, 206) 0%, rgb(104, 80, 193) 55%, rgb(49, 13, 115) 100%);
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .btnsContainer {
